# rakukan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVERTER_REDESIGN.md  Cargo.toml  DESIGN.md  Makefile.toml  NOTICE  README.md  SEGMENT_EDIT_REDESIGN.md  THIRD_PARTY_LICENSES.md  handoff.md  rakukan_installer.iss
.cargo/: config.toml
.claude/: settings.json  settings.local.json
apps/rakukan-settings-winui/: MainWindow.xaml  MainWindow.xaml.cs  Rakukan.Settings.WinUI.csproj  SettingsStore.cs
assets/vibrato/: README.md
assets/vibrato/mecab-ipadic-2.7.0-20070801/: Makefile.in  configure
config/: config.toml  keymap.toml
crates/rakukan-dict/: Cargo.toml
crates/rakukan-dict-builder/: Cargo.toml
crates/rakukan-dict-builder/src/: main.rs
crates/rakukan-dict/src/: lib.rs  mozc_dict.rs  skk.rs  store.rs  user_dict.rs
crates/rakukan-engine/: Cargo.toml  build.rs
crates/rakukan-engine-abi/src/: lib.rs
crates/rakukan-engine-cli/: Cargo.toml
crates/rakukan-engine-cli/src/: main.rs
crates/rakukan-engine-host/: Cargo.toml
crates/rakukan-engine-host/src/: main.rs
crates/rakukan-engine-rpc/src/: client.rs  lib.rs  pipe.rs  protocol.rs  server.rs
crates/rakukan-engine/src/: backend.rs  conv_cache.rs  digits.rs  ffi.rs  kana.rs  lib.rs  segmenter.rs
crates/rakukan-engine/src/dict/: loader.rs
crates/rakukan-engine/src/kanji/: backend.rs  hf_download.rs  llamacpp.rs
crates/rakukan-settings/: Cargo.toml
crates/rakukan-settings/src/: main.rs
crates/rakukan-tray/src/: main.rs
crates/rakukan-tsf/: Cargo.toml  build.rs
crates/rakukan-tsf/src/: diagnostics.rs  extension.rs  globals.rs  lib.rs  macros.rs
crates/rakukan-tsf/src/engine/: config.rs  input_mode.rs  keymap.rs  mod.rs  state.rs  text_util.rs  user_action.rs
crates/rakukan-tsf/src/tsf/: candidate_window.rs  display_attr.rs  edit_session.rs  factory.rs  language_bar.rs  live_session.rs  mod.rs  mode_indicator.rs  registration.rs  tray_ipc.rs
crates/rakukan-tsf/src/tsf/factory/: dispatch.rs  edit_ops.rs  on_compose.rs  on_convert.rs  on_input.rs
crates/rakukan-vibrato-builder/: Cargo.toml
crates/rakukan-vibrato-builder/src/: main.rs
docs/: CONVERSION_PIPELINE_CLEANUP_PLAN.md  CONVERTER_REDESIGN.md  DESIGN.md  ROADMAP.md  handoff.md
scripts/: build-engine.ps1  build-engine.ps1.orig  build-installer.ps1  build-tsf.ps1  build-vibrato-dict.ps1  clean-registry.ps1  detect-gpu.ps1  download-skk.ps1  install.ps1  rakukan_installer.iss  refresh-models.ps1  sign-artifacts.ps1  uninstall.ps1
