[package]
name = "rakukan-settings"
version.workspace = true
edition.workspace = true
description = "rakukan settings GUI"

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
