[package]
name = "rakukan-vibrato-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MeCab IPADIC から Vibrato system.dic を生成するツール"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
encoding_rs = "0.8"
vibrato = "0.5.2"
